/**
 * Represents a commission employee who earns money based on a percentage of their sales.
 * This class extends the Employee base class and adds commission rate and gross sales functionality.
 * 
 * @author kkatsumi
 * @version 1.0
 * @since 2025
 */
public class CommissionEmployee extends Employee {
    /** The employee's commission rate as a decimal (e.g., 0.15 for 15%) */
    private double commissionRate;
    
    /** The total gross sales amount generated by the employee */
    private double grossSales;
    
    /**
     * Constructs a CommissionEmployee with the specified personal information, commission rate, and gross sales.
     * 
     * @param firstName the employee's first name
     * @param lastName the employee's last name
     * @param socialSecurityNumber the employee's social security number
     * @param commissionRate the employee's commission rate as a decimal (e.g., 0.15 for 15%)
     * @param grossSales the total gross sales amount generated by the employee
     */
    public CommissionEmployee(String firstName, String lastName, String socialSecurityNumber, double commissionRate, double grossSales) {
        super(firstName, lastName, socialSecurityNumber);
        this.commissionRate = commissionRate;
        this.grossSales = grossSales;
    }
    
    /**
     * Returns the employee's commission rate as a decimal.
     * 
     * @return the commission rate (e.g., 0.15 for 15%)
     */
    public double getCommissionRate() {
        return commissionRate;
    }
    
    /**
     * Sets the employee's commission rate.
     * 
     * @param commissionRate the new commission rate as a decimal (e.g., 0.15 for 15%)
     */
    public void setCommissionRate(double commissionRate) {
        this.commissionRate = commissionRate;
    }
    
    /**
     * Returns the employee's total gross sales amount.
     * 
     * @return the gross sales amount
     */
    public double getGrossSales() {
        return grossSales;
    }
    
    /**
     * Sets the employee's total gross sales amount.
     * 
     * @param grossSales the new gross sales amount
     */
    public void setGrossSales(double grossSales) {
        this.grossSales = grossSales;
    }
    
    /**
     * Returns a string representation of the commission employee.
     * 
     * @return a formatted string containing the employee's basic information, commission rate as percentage, and gross sales
     */
    @Override
    public String toString() {
        return String.format("%s - Commission Rate: %.1f%%, Gross Sales: $%.2f", super.toString(), commissionRate * 100, grossSales);
    }
}